--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -1,25 +1,37 @@
 .search-bar-wrapper {
   border-bottom: 1px solid #3333;
-  height: 60px;
+  height: 70px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   background: #ffffff;
 }
 .search-form {
-  width: 150px;
+  width: 200px;
   font-size: 14px;
 }
 .search-form input {
   text-align: center;
   color: #262626;
+  border-radius: 3px;
+  border: 1px solid #3333;
 }
+
+input {
+  width: 210px;
+  height: 23px;
+}
+
 .image-wrapper {
-  height: 50px;
+
 }
 
 .logo-image {
   height: 100%;
+}
+
+i {
+  font-size: 1.7rem;
 }
 
 .social-wrapper {
