--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   font-size: large;
 }
 
+.image-wrapper {
+  margin-left: 100px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
